@@ -90,8 +90,8 @@
 				/** Initializes the temperature sensor driver, including setting up the appropriate ADC channel.
 				 *  This must be called before any other temperature sensor routines.
 				 *
-				 *  The ADC itself (not the ADC channel) must be configured separately before calling the temperature
-				 *  sensor functions.
+				 *  \note The ADC itself (not the ADC channel) must be configured separately before calling the
+				 *        temperature sensor functions.
 				 */
 				static inline void Temperature_Init(void);
 			#else
